Changes from Ant 1.4.1 to current CVS version
==============================================

Changes that could break older environments:
--------------------------------------------

* the RegexpMatcher interface has been extended to support case
  insensitive matches and other options - custom implementations of
  this interface won't work any longer.  We recommend to use the new
  Regexp interface that also supports substitution instead of the
  RegexpMatcher interface in the future.

* <gzip> will throw an exception if your src attribute points to a directory.

* Unjar, Unzip and Unwar will throw an exception if the Src attribute
  represents a directory.  Support for nested filesets is provided
  instead.

* It is no longer possible to overwrite a property using tasks like
  <condition>, <exec>, <pathconvert>, or <tstamp>. In some exceptional
  cases it will generate a warning if you attempt to overwrite an
  existing property.
  
* Taskwriters please note: Whenever tasks had any overloaded set* methods,
  Ant's introspection mechanism would select the last overloaded method
  provided to it by the Java Runtime.  A modification has now been made such 
  that when the Java Runtime provides a method with a String as its argument, 
  a check is made to see if there is another overloaded method that takes in
  some other type of argument.  If there is one such method, then the method 
  that takes in String as an argument is not selected by the Introspector.
  
* The pattern definition **/._* has been included into the Default 
  Excludes list.
  
* <propertyfile>'s <entry> element was modified to remove "never" as a value
  as its behavior was undocumented and flakey.


Fixed bugs:
-----------
* Fixed bug where <move> ignored <filterset>s.

* Ant works properly with the combination of Java1.4/WindowsXP

* Fixed bug where <java> used to sometimes invoke class constructors twice.

* Fixed bug with 4NT shell support
